# net-cpp

./: .ccls  .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE  README.md  log  main.cpp  xmake.lua
bak/tests/transport/tcp_client/: CMakeLists.txt
source/: CMakeLists.txt  net.h  xmake.lua
source/http/: CMakeLists.txt  context.cpp  helper.cpp  http.cpp  http_msg.cpp  http_router.cpp  http_server.cpp  msg.cpp  parse.cpp  router.cpp  server.cpp  xmake.lua
source/http/helper/: CMakeLists.txt  static.cpp
source/net/: xmake.lua
source/net/http/: CMakeLists.txt  context.cpp  http.cpp  msg.cpp  parse.cpp  proto.cpp  router.cpp  xmake.lua
source/net/http/component/: static.cpp
source/net/http/helper/: static.cpp  xmake.lua
source/net/sync/: CMakeLists.txt  poller.cpp
source/net/transport/: transport.cpp  xmake.lua
source/net/transport/tcp/: CMakeLists.txt  conn.cpp  context.cpp  helper.cpp  server.cpp  tcp.cpp  utils.cpp  xmake.lua
source/net/utils/: CMakeLists.txt  utils.cpp  xmake.lua
source/sync/: CMakeLists.txt  mutex.cpp  poller.cpp  xmake.lua
source/transport/: CMakeLists.txt  server.cpp  tcp_server.cpp  utils.cpp  xmake.lua
source/transport/tcp/: CMakeLists.txt  conn.cpp  context.cpp  helper.cpp  server.cpp  tcp.cpp  xmake.lua
source/utils/: CMakeLists.txt  fd.cpp  utils.cpp  xmake.lua
source/utils/wheel/: CMakeLists.txt  xmake.lua
source/wheel/: CMakeLists.txt  mutex.cpp  str.cpp  xmake.lua
src/: CMakeLists.txt  convert.cpp  logctl.cpp  net.h  str.cpp  xmake.lua
src/coro/: CMakeLists.txt  executor.cpp  xmake.lua
src/http/: CMakeLists.txt  http_server.cpp
src/io/: splice.cpp
src/net/: CMakeLists.txt  xmake.lua
src/net/dns/: rr.cpp  utils.cpp  xmake.lua
src/net/http/: CMakeLists.txt  msg.cpp  parse.cpp  proto.cpp  router.cpp  xmake.lua
src/net/http/component/: static.cpp
src/net/http/proto/: accept.cpp  media-type.cpp
src/net/io/: splice.cpp
src/net/sync/: CMakeLists.txt  poller.cpp  xmake.lua
src/net/transport/: socket.cpp
src/net/transport/tcp/: CMakeLists.txt  def.cpp  resolve.cpp  utils.cpp  xmake.lua
src/sync/: CMakeLists.txt  poller.cpp
src/sys/: CMakeLists.txt  pipe.cpp  raw.cpp  sync.cpp  xmake.lua
src/sys/net/: accept.cpp  resolve.cpp  socket.cpp  tcp.cpp
src/transport/: CMakeLists.txt  poller.cpp  poller.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  transport.cpp  transport.h
src/utils/: CMakeLists.txt  compress.cpp  fd.cpp  xmake.lua
src/utils/wheel/: CMakeLists.txt  wheel.cpp  wheel.h
src/wheel/: CMakeLists.txt  str.cpp  utils.cpp  xmake.lua
test/: CMakeLists.txt  xmake.lua
test/ai/: test_dev.cpp  xmake.lua
test/benches/: .gitignore  compare.py  xmake.lua
test/benches/gbench/: report.py
test/benches/spsc/: bench.h  bench.sh  bench_spsc.cpp  xmake.lua
test/benches/spsc/boost/: spsc.cpp
test/benches/spsc/moodycamel/: spsc.cpp
test/compile/: http.cpp  sockaddr.cpp  sys_raw.cpp  test_ai.cpp  test_http.cpp  test_socket.cpp  test_sys_raw.cpp  test_type_traits.cpp  type_traits.cpp  xmake.lua
test/convert/: test_convert_string.cpp  xmake.lua
test/coro/: test_awaiter.cpp  test_executor.cpp  test_lazy.cpp  test_semaphore.cpp  test_task.cpp  test_with_noop.cpp  test_with_nt.cpp  xmake.lua
test/dns/: test_compress.cpp  xmake.lua
test/feature/: test_flags.cpp  xmake.lua
test/http/: CMakeLists.txt  test_parse.cpp  test_router.cpp  xmake.lua
test/http/component/: test_static.cpp  xmake.lua
test/http/http_server/: CMakeLists.txt  http_server_test.cpp  test_http_server.cpp  xmake.lua
test/http/proto/: test_accept.cpp  xmake.lua
test/include/: random.h  tool.h
test/include/coro/: tool.h
test/integration/: xmake.lua
test/integration/sys/: xmake.lua
test/integration/sys/net/: bind.cpp  test_bind.cpp  test_connect.cpp  xmake.lua
test/regex/: test_level0.cpp
test/script/: echo.py  start_echo_server.py  with_echo_server.py
test/sync/: CMakeLists.txt  xmake.lua
test/sync/mutex/: CMakeLists.txt  try_lock_guard.cpp
test/sys/: test_net.cpp
test/transport/: CMakeLists.txt  xmake.lua
test/transport/tcp/: CMakeLists.txt  test_accept.cpp  test_bind.cpp  test_connect.cpp  test_listen.cpp  xmake.lua
test/transport/tcp/tcp_client/: CMakeLists.txt  test_tcp_client.cpp  test_tcp_client_with_poll.cpp  xmake.lua
test/transport/tcp/tcp_server/: test_tcp_server.cpp  xmake.lua
test/transport/tcp_client/: CMakeLists.txt  test_tcp_client.cpp  test_tcp_client_with_poll.cpp  xmake.lua
test/transport/tcp_client/script/: test_with_echo_server.py
test/transport/tcp_server/: CMakeLists.txt  test_tcp_server.cpp  xmake.lua
test/transport/tcp_server/script/: test_with_echo_client.py
test/unit/: xmake.lua
test/unit/convert/: CMakeLists.txt  test_convert_string.cpp  xmake.lua
test/unit/coro/: CMakeLists.txt  arg_guard.cpp  pub_sub.cpp  signal.cpp  task.cpp  test_executor.cpp  test_lazy.cpp  test_pub_sub.cpp  test_semaphore.cpp  test_signal.cpp  test_with_noop.cpp  xmake.lua
test/unit/dns/: decompress.cpp  proto.cpp  test_compress.cpp  test_decompress.cpp  test_proto.cpp  xmake.lua
test/unit/feature/: test_flags.cpp  xmake.lua
test/unit/http/: CMakeLists.txt  test_parse.cpp  xmake.lua
test/unit/http/http_server/: CMakeLists.txt  test_http_server.cpp  xmake.lua
test/unit/http/proto/: test_accept.cpp  xmake.lua
test/unit/regex/: CMakeLists.txt  level0.cpp  xmake.lua
test/unit/ser/: test_ser.cpp  xmake.lua
test/unit/sync/: test_spsc.cpp  xmake.lua
test/unit/sys/: test_net.cpp  xmake.lua
test/unit/transport/tcp/: CMakeLists.txt  test_bind.cpp  test_connect.cpp  (+2 more)
test/unit/wheel/: CMakeLists.txt  bit.cpp  test_bit.cpp  test_str.cpp  test_utils.cpp  xmake.lua
test/wheel/: test_str.cpp  xmake.lua
test/wheel/mutex/: CMakeLists.txt  try_lock_guard.cpp  xmake.lua
test/wheel/type_traits/: main.cpp  xmake.lua
tests/transport/tcp_client/: CMakeLists.txt  tcp_client_poll_test.cpp  tcp_client_test.cpp  tcp_client_test_with_poll.cpp
tests/transport/tcp_server/: CMakeLists.txt  tcp_server_test.cpp
(+254 files in other folders)
